--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 body {
   font-family: "Montserrat";
   text-align: center;
+  margin: 0px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -60,7 +61,7 @@ p {
 
 .nav-link {
   font-size: 1.2rem;
-  font-family: "Montserrat-Light";
+  font-family: "Ubuntu";
 }
 
 /* Buttons */
@@ -112,59 +113,6 @@ p {
   color: #3fb0bd;
 }
 
-/* Testimonial Section */
-
-#testimonials {
-  background-color: #3fb0bd;
-}
-
-.testimonial-text {
-  font-size: 3rem;
-  line-height: 1.5;
-}
-
-.testimonial-image {
-  width: 10%;
-  border-radius: 100%;
-  margin: 20px;
-}
-
-
-#press {
-  background-color: #3fb0bd;
-  padding-bottom: 3%;
-}
-
-.press-logo {
-  width: 15%;
-  margin: 20px 20px 50px;
-}
-
-/* Pricing Section */
-
-#pricing {
-  padding: 100px;
-}
-
-.price-text {
-  font-size: 3rem;
-  line-height: 1.5;
-}
-
-.pricing-column {
-  padding: 3% 2%;
-}
-
-/* CTA Section */
-
-
-/* Footer Section */
-
-
-.social-icon {
-  margin: 20px 10px;
-}
-
 @media (max-width: 1028px) {
 
   #title {
@@ -175,4 +123,9 @@ p {
     position: static;
     transform: rotate(0);
   }
+}
+#counter{
+  position: fixed;
+  left: 20px;
+  z-index: 1;
 }
